--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    border: 0;
     box-sizing: border-box;
 }
 
@@ -9,47 +10,49 @@ body{
     
 }
 
-
-
-header{
-    
-    padding: 20px;
+.navbar{
     display: flex;
-    justify-content: space-between;
+    padding: 10px;
+    position: relative;
+    width: 100%;
+    height: 70px;
+    background-color: #414141;
+    color: white;
     align-items: center;
-    
-
+    justify-content: space-between;
+    box-sizing: inherit;
 }
 
-.logo img{
+
+.logo {
     height: 50px;
 }
 
 nav ul{
     list-style: none;
     display: flex;
-    justify-content: flex-end;
-    align-items: center; 
-    margin-right: 20px;
+    justify-content: flex-end; 
 }
 
 nav ul li{
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 50px;
+    margin-right: 0px;
     text-decoration: none;
-    margin: 0 20px;
+    
 }
 
 nav ul li a{
+    display: flex;
+    justify-content: end;
     text-decoration: none;
     color: white;
     font-size: 15px;
     font-weight: bold;
 }
 
-nav button {
-    display: flex;
-    align-items: center;
-    margin-left: auto; 
-}
+
 
 button {
     padding: 10px 20px;
@@ -70,43 +73,154 @@ button {
     
 }
 
-section p{
+.unique{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: white;
     text-align: center;
-    padding-top: 80px;
+    padding-top: 200px;
     font-weight: bold;
     font-size: 3rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 
     
 }
 
-section h1{
+.title{
     color: black;
     text-align: center;
-    padding-top: 80px;
+    padding-top: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
     font-size: 2rem;
 }
 
-.card{
+.card-container{
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: relative;
-    justify-content: space-around;
-    height: 100%;
-    padding: 20px;
+    justify-content: center;
     flex-wrap: wrap;
-    box-sizing: border-box;
+    gap: 25px;
+    margin-top: 50px;
+}
+.card{
+    width: 280px;
+    height: 400px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 2px 4px rgb(0, 0, 0,0.3);
+    overflow: hidden;
+    
 }
 
-.box{
-    background-color: #ffffff;
-    color: #040404;
-    padding: 20px;
-    width: 22%;
+.social{
+    height: 90px;
+    max-width: 100%;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    vertical-align: middle;
+    display: inline-block;
+    padding-left: 90px;
+    padding-top: 30px;
+
+}
+
+.sustain{
+    height: 90px;
+    max-width: 100%;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    vertical-align: middle;
+    display: inline-block;
+    padding-left: 100px;
+    padding-top: 30px;
+
+}
+
+.smart{
+    height: 90px;
+    max-width: 100%;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    vertical-align: middle;
+    display: inline-block;
+    padding-left: 110px;
+    padding-top: 30px;
+
+}
+
+.design{
+    height: 90px;
+    max-width: 100%;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    vertical-align: middle;
+    display: inline-block;
+    padding-left: 100px;
+    padding-top: 30px;
+
+}
+
+.commun{
+    height: 90px;
+    max-width: 100%;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    vertical-align: middle;
+    display: inline-block;
+    padding-left: 75px;
+    padding-top: 30px;
+
+}
+.card-content h3{
     text-align: center;
-    border-radius: 10px;
-    margin: 10px 0;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    font-weight: bold;
+}
+.card-content p{
+    padding-top: 50px;
+    text-align: center;
+    color: #646464;
+    font-family: "TheMixSemiBold-Plain", Sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+}
+.card-content{
+    padding: 20px;
+}
+.explore{
+    
+    color: white;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 100px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    font-size: 2rem;
+    
+}
+
+.garden{
+    background-image: url(assets/garden.jpg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    background-size: cover;
+    background-position: center;
+    
+    height: 80vh;
+
+}
+iframe{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
 }
