--- a/style.css
+++ b/style.css
@@ -96,22 +96,7 @@ button {
     font-size: 2rem;
 }
 
-.card-container{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 25px;
-    margin-top: 50px;
-}
-.card{
-    width: 280px;
-    height: 400px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0px 2px 4px rgb(0, 0, 0,0.3);
-    overflow: hidden;
-    
-}
+
 
 .social{
     height: 90px;
@@ -177,6 +162,23 @@ button {
     padding-top: 30px;
 
 }
+
+.card-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin-top: 50px;
+}
+.card{
+    width: 280px;
+    height: 400px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 2px 4px rgb(0, 0, 0,0.3);
+    overflow: hidden;
+    
+}
 .card-content h3{
     text-align: center;
     font-weight: bold;
@@ -224,3 +226,114 @@ iframe{
 
 
 }
+
+.join-container{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding-top: 30px;
+}
+
+.join-img{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    height: 400px;
+    padding-top: 20px;
+}
+
+.card-container2{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    flex: 2;
+    flex-wrap: wrap;
+    gap: 20px;
+    position: relative;
+    flex-direction: row;
+    
+
+}
+.card1{
+    padding: 10px;
+    width: 210px;
+    height: 450px;
+    overflow: hidden;
+    background-color: aliceblue;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgb(0, 0, 0,0.1);
+    
+}
+.card-content1 h3{
+    text-align:start;
+    font-weight: bold;
+}
+
+.card-content1 ul{
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+.card-content1 ul li{
+    list-style: none;
+    padding: 10px;
+    font-size: 1.2rem;
+
+}
+
+.card1 button{
+    
+    background-color: #2971e3;
+
+}
+
+.card1 button a{
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+    
+}
+
+
+.download{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 40px;
+    margin: 10px;
+    text-align: center;
+}
+.download img{
+    
+    padding: 20px;
+}
+
+.hub-container{
+    background-image: url(assets/garden.jpg);
+    height: 500px;
+    background-size: cover; 
+   
+}
+    
+
+
+.hub-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 20px;
+    padding-top: 50px;
+}
+.hub-content h3{
+    text-align: center;
+    color:white;
+}
+.hub-content img{
+    padding: 50px;
+    width: auto;
+    height: auto;
+    
+}
+
+
