--- a/style.css
+++ b/style.css
@@ -336,4 +336,141 @@ iframe{
     
 }
 
+.trend-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin-top: 50px;
+}
+.trend{
+    width: 400px;
+    height: 450px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0px 1px 2px rgb(0, 0, 0,0.3);
+    overflow: hidden;
+    
+}
+.trend-content h3{
+    text-align: center;
+    font-weight: bold;
+}
+.trend-content p{
+    padding-top: 50px;
+    text-align: center;
+    color: #646464;
+    font-family: "TheMixSemiBold-Plain", Sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+}
+.trend-content{
+    padding: 20px;
+}
+
+.trend img{
+    
+    max-height: 100%;
+    max-width: 100%;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    vertical-align: middle;
+    display: inline-block;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 30px;
+
+}
+.divider {
+    width: 100%;
+    border-bottom: 1px solid #b9b9b9;
+    margin-top: 20px;
+  }
+
+.btn-trend{
+    margin-left: 750px;
+    margin-top: 30px;
+    
+}
+
+
+.btn-trend a{
+    
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+    
+}
+
+.words-container{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.words{
+    width: 200px;
+    height: 135px;
+    background-color: #000000;
+    
+    box-shadow: 0px 1px 2px rgb(0, 0, 0,0.3);
+    overflow: hidden;
+    
+}
+
+.words img{
+    max-height: 300px;
+    max-width: 200px;
+    
+    
+}
+
+.ft-map{
+	max-width: 1170px;
+	margin:auto;
+}
+.row{
+	display: flex;
+	flex-wrap: wrap;
+    
+}
+ul{
+    list-style: none;
+    padding: auto;
+   
+    
+}
+li{
+    padding: 10px;
+}
+
+ul li a{
+    color: #b9b9b9;
+    text-decoration: none;
+    
+}
+
+.footer{
+	background-color: #24262b;
+    padding: 70px 0;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+	font-size: 18px;
+    font-weight: bold;
+	color: #636363;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
 
